--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "image-downloader": "^4.3.0",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
