--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://gitlab.com/B-raz23/smart-rent-api#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.36.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -27,6 +28,7 @@
     "image-downloader": "^4.3.0",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.6.1"
