--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.2",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
