--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cloudinary": "^1.36.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
