--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.2",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
